(GH-2) Added appveyor build configuration

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,13 @@
 image:
   - Ubuntu
-#  - Visual Studio 2017
+  - Visual Studio 2017
 version: '{build}'
 pull_requests:
   do_not_increment_build_number: true
 skip_branch_with_pr: true
 configuration: Release
-platform: Any CPU
+environment:
+  APPVEYOR_YML_DISABLE_PS_LINUX: true
 
 matrix:
   fast_finish: true
@@ -16,11 +17,13 @@ test: off
 deploy: off
 
 build_script:
-- ps: echo "$env:CONFIGURATION"
-- ps: echo "$env:PLATFORM"
-- sh: echo "$PLATFORM"
-- sh: echo "$CONFIGURATION"
+  - ps: .\build.ps1 -Target AppVeyor -Configuration $env:CONFIGURATION
+  - sh: ./build.sh --target=AppVeyor --configuration=$CONFIGURATION
 
+
+cache:
+  - 'tools -> setup.cake,tools/packages.config'
+  - 'src/Cake.Warp/warp -> src/Cake.Warp/Cake.Warp.csproj'
 
 for:
 
