--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ build_script:
 
 
 cache:
-  - 'tools -> setup.cake,tools/packages.config'
+  - 'tools -> recipe.cake,tools/packages.config'
   - 'src/Cake.Warp/warp -> src/Cake.Warp/Cake.Warp.csproj'
 
 for:
