--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -6,10 +6,11 @@
     <ItemGroup>
         <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
         <PackageReference Include="stylecop.analyzers" Version="1.1.118">
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-          <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
-
-    <Import Project="downloads.targets" />
+    <ItemGroup>
+        <EmbeddedResource Include="warp/**/*" />
+    </ItemGroup>
 </Project>
