--- a/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
+++ b/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework Condition="'$(OS)'=='Unix'">netcoreapp2.1</TargetFramework>
-    <TargetFramework Condition="'$(OS)'!='Unix'">netcoreapp2.1;net461</TargetFramework>
+    <TargetFrameworks Condition="'$(OS)'!='Unix'">netcoreapp2.1;net461</TargetFrameworks>
     <LangVersion>7.3</LangVersion>
 
     <IsPackable>false</IsPackable>
