--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
         <LangVersion>7.3</LangVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
