--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -7,11 +7,21 @@
         <CodeAnalysisRuleSet>Cake.Warp.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Cake.Core" Version="0.28.0" PrivateAssets="All" />
+        <PackageReference
+            Include="Cake.Core"
+            Version="0.28.0"
+            PrivateAssets="All" />
         <PackageReference Include="stylecop.analyzers" Version="1.1.118">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <!-- The following reference is only needed to build the library
+             On Windows for the .NET 4.6.1 Framewark -->
+        <PackageReference
+            Include="System.Runtime.InteropServices.RuntimeInformation"
+            Version="4.3.0"
+            Condition="'$(TargetFramework)'=='net461' AND '$(OS)'=='Windows_NT'"
+            PrivateAssets="all" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="warp/**/*" />
