(GH-4) Added ability to save warp file to disk on  library load

--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -13,6 +13,7 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="ModuleInit.Fody" Version="2.0.0" PrivateAssets="All" />
+        <PackageReference Include="Resourcer.Fody" Version="1.7.3" />
         <PackageReference Include="stylecop.analyzers" Version="1.1.118">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
