(GH-#) Commit summary
#Commit body

#Co-authored-by: GITHUB_USERNAME <GITHUB_USERNAME@users.noreply.github.com>
## Remove the commented lines you want to use

(build) Added missing package reference in integration tests

--- a/src/Cake.Warp.IntegrationTests/Cake.Warp.IntegrationTests.csproj
+++ b/src/Cake.Warp.IntegrationTests/Cake.Warp.IntegrationTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AppVeyor.TestLogger" Version="2.0.0" Condition="'$(APPVEYOR)'!=''" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
