(doc) Added new label to git release manager

--- a/GitReleaseManager.yaml
+++ b/GitReleaseManager.yaml
@@ -23,6 +23,7 @@ issue-labels-include:
 
 issue-labels-exclude:
   - Build
+  - Internal / Refactoring
 issue-labels-alias:
   - name:    Documentation
     header:  Documentation
