(GH-13) Added first draft of the wyam documentation
fixes #13

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,7 @@ ehthumbs_vista.db
 docs/input/tasks/*
 
 # Wyam related
-docs/config.wyam.dll
-docs/config.wyam.hash
+config.wyam.*
 
 
 # Project specific ignore list
