Added codecov to required status check in mergify

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -26,6 +26,7 @@ pull_request_rules:
     conditions:
       - "status-success=continuous-integration/appveyor/pr"
       - "status-success=continuous-integration/travis-ci/pr"
+      - "status-success=codecov/patch"
       - "#approved-reviews-by>=1"
       - "#review-requested=0"
       - "#changes-requested-reviews-by=0"
