--- a/src/Cake.Warp.Demo/Cake.Warp.Demo.csproj
+++ b/src/Cake.Warp.Demo/Cake.Warp.Demo.csproj
@@ -6,6 +6,7 @@
     <LangVersion>7.3</LangVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 </Project>
