--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -29,6 +29,8 @@
         <PackageTags>cake;addin;warp;self-contained</PackageTags>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/cake-contrib/Cake.Warp.git</RepositoryUrl>
+        <MilestoneReleasePath>$(MSBuildProjectDirectory)/../../BuildArtifacts/MILESTONE.md</MilestoneReleasePath>
+        <PackageReleaseNotes Condition="EXISTS('$(MilestoneReleasePath)')">$([System.IO.File]::ReadAllText("$(MilestoneReleasePath)"))</PackageReleaseNotes>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Cake.Core" Version="0.28.0" PrivateAssets="All" />
