--- a/src/Cake.Warp.IntegrationTests/Cake.Warp.IntegrationTests.csproj
+++ b/src/Cake.Warp.IntegrationTests/Cake.Warp.IntegrationTests.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="AppVeyor.TestLogger" Version="2.0.0" Condition="'$(APPVEYOR)'!=''" />
+    <PackageReference Include="coverlet.msbuild" Version="2.6.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.0" />
