--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,9 @@ build: off
 test: off
 deploy: off
 
+install:
+- sh: sudo apt-get update && sudo apt-get install -y libgit2-dev
+
 build_script:
   - ps: .\build.ps1 -Target AppVeyor -Configuration $env:CONFIGURATION
   - sh: ./build.sh --target=AppVeyor --configuration=$CONFIGURATION
