--- a/src/Cake.Warp.Demo/Cake.Warp.Demo.csproj
+++ b/src/Cake.Warp.Demo/Cake.Warp.Demo.csproj
@@ -9,4 +9,11 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
