--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -7,12 +7,10 @@
         <CodeAnalysisRuleSet>Cake.Warp.ruleset</CodeAnalysisRuleSet>
         <NeutralLanguage>en-GB</NeutralLanguage>
         <AssemblyTitle>Cake Warp addin</AssemblyTitle>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
     <PropertyGroup>
-        <!-- I am lazy, no don't want to update the year every time a new year
+        <!-- I am lazy, so I don't want to update the year every time a new year
              comes around -->
         <StartYear>2019</StartYear>
         <EndYear>$([System.DateTime]::Today.Year)</EndYear>
@@ -37,13 +35,13 @@
     <ItemGroup>
         <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
         <PackageReference Include="Fody" Version="6.0.0">
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-          <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" PrivateAssets="All" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-          <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="ModuleInit.Fody" Version="2.1.0" PrivateAssets="All" />
         <PackageReference Include="Resourcer.Fody" Version="1.8.0" PrivateAssets="All" />
