--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -51,7 +51,7 @@
         </PackageReference>
         <!-- The following reference is only needed to build the library
              On Windows for the .NET 4.6.1 Framewark -->
-        <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" Condition="'$(TargetFramework)'=='net461' AND '$(OS)'=='Windows_NT'" PrivateAssets="all" />
+        <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" Condition="'$(TargetFramework)'=='net461'" PrivateAssets="all" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="warp/**/*" />
