--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -23,6 +23,7 @@
         <Copyright>Copyright © $(FullYear) — $(Authors.Replace(';',','))</Copyright>
         <Description>Cake addin for creating self-contained single binary applications using  warp (https://github.com/dgiagio/warp)</Description>
         <IncludeContentInPack>false</IncludeContentInPack>
+        <PackageIcon>cake-contrib-small.png</PackageIcon>
         <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@49c3b71def749b86416d773f1ead0c0da2d590ea/png/cake-contrib-medium.png</PackageIconUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://cake-contrib.github.io/Cake.Warp/</PackageProjectUrl>
@@ -31,6 +32,13 @@
         <RepositoryUrl>https://github.com/cake-contrib/Cake.Warp.git</RepositoryUrl>
         <PackageReleaseNotes>https://github.com/cake-contrib/Cake.Warp/releases/tag/$(Version)</PackageReleaseNotes>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\..\graphics\cake-contrib\png\cake-contrib-small.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
