--- a/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
+++ b/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
@@ -1,31 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework Condition="'$(OS)'=='Unix'">netcoreapp2.1</TargetFramework>
-    <TargetFrameworks Condition="'$(OS)'!='Unix'">netcoreapp2.1;net461</TargetFrameworks>
-    <LangVersion>7.3</LangVersion>
+    <PropertyGroup>
+        <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
+        <TargetFrameworks Condition="'$(OS)'!='Unix'">$(TargetFrameworks);net461</TargetFrameworks>
+        <NoWarn>$(NoWarn);CS1591;SA1600</NoWarn>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AppVeyor.TestLogger" Version="2.0.0" Condition="'$(APPVEYOR)'!=''" />
-    <PackageReference Include="Cake.Testing" Version="0.33.0" />
-    <PackageReference Include="coverlet.msbuild" Version="2.9.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="AppVeyor.TestLogger" Version="2.0.0" Condition="'$(APPVEYOR)'!=''" />
+        <PackageReference Include="Cake.Testing" Version="0.33.0" />
+        <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+        <PackageReference Include="nunit" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Cake.Warp\Cake.Warp.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="../Cake.Warp/Cake.Warp.csproj" />
+    </ItemGroup>
 
 </Project>
