feat: update warp binaries from new maintainer
Since the original maintainer (@dgiagio) no longer is updating the warp binaries, and a new
maintainer have stepped up to continue the maintainance of the software, we should change to provide
these binaries to the new maintainer.

fix #64

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,5 +50,6 @@ build_script:
   - pwsh: ./build.ps1 --target=ContinuousIntegration --verbosity=Diagnostic
 
 cache:
-  - "tools -> build.config,setup.cake"
+  - "tools -> build.config,recipe.cake"
   - ".dotnet -> build.config"
+  - "src/Cake.Warp/warp -> recipe.cake"
