--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -5,7 +5,7 @@
       "repositoryOwner": "cake-contrib",
       "projectMaintainer": "AdmiringWorm",
       "author": "Kim J. Nordmo",
-      "description": "Cake addin for creating self-contained single binary applications using [warp](https://github.com/dgiagio/warp)",
+      "description": "Cake addin for creating self-contained single binary applications using [warp](https://github.com/fintermobilityas/warp)",
       "licenseType": "MIT",
       "sourceDir": "./src",
       "scriptName": "recipe.cake",
