--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -21,7 +21,7 @@
         <Title>$(AssemblyTitle)</Title>
         <Authors>Kim J. Nordmo;cake-contrib</Authors>
         <Copyright>Copyright © $(FullYear) — $(Authors.Replace(';',','))</Copyright>
-        <Description>Cake addin for creating self-contained single binary applications using  warp (https://github.com/dgiagio/warp)</Description>
+        <Description>Cake addin for creating self-contained single binary applications using  warp (https://github.com/fintermobilityas/warp)</Description>
         <PackageIcon>cake-contrib-small.png</PackageIcon>
         <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@49c3b71def749b86416d773f1ead0c0da2d590ea/png/cake-contrib-medium.png</PackageIconUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
