--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -7,6 +7,8 @@
         <CodeAnalysisRuleSet>Cake.Warp.ruleset</CodeAnalysisRuleSet>
         <NeutralLanguage>en-GB</NeutralLanguage>
         <AssemblyTitle>Cake Warp addin</AssemblyTitle>
+        <Company>Cake Contributors</Company>
+        <NeutralLanguage>en-GB</NeutralLanguage>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -19,17 +21,19 @@
 
         <!-- Properties related to packaging -->
         <Title>$(AssemblyTitle)</Title>
-        <Authors>Kim J. Nordmo;cake-contrib</Authors>
+        <Authors>Kim J. Nordmo;$(Company)</Authors>
         <Copyright>Copyright © $(FullYear) — $(Authors.Replace(';',','))</Copyright>
         <Description>Cake addin for creating self-contained single binary applications using  warp (https://github.com/fintermobilityas/warp)</Description>
         <PackageIcon>cake-contrib-small.png</PackageIcon>
         <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@49c3b71def749b86416d773f1ead0c0da2d590ea/png/cake-contrib-medium.png</PackageIconUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://cake-contrib.github.io/Cake.Warp/</PackageProjectUrl>
-        <PackageTags>cake;addin;warp;self-contained</PackageTags>
+        <PackageTags>Cake;Cake Script;Build;Warp;Self-Contained</PackageTags>
         <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/cake-contrib/Cake.Warp.git</RepositoryUrl>
-        <PackageReleaseNotes>https://github.com/cake-contrib/Cake.Warp/releases/tag/$(Version)</PackageReleaseNotes>
+        <PackageSourceProjectUrl>https://github.com/cake-contrib/Cake.Warp</PackageSourceProjectUrl>
+        <RepositoryUrl>$(PackageSourceProjectUrl).git</RepositoryUrl>
+        <PackageReleaseNotes Condition=" '$(Version)' == '$(FileVersion)'">All release notes for $(AssemblyName) can be found on our GitHub release page - $(PackageSourceProjectUrl)/releases/tag/$(Version)</PackageReleaseNotes>
+        <PackageReleaseNotes Condition=" '$(Version)' != '$(FileVersion)'">Development releases do not contain release notes, please see the closed issues in these cases - $(PackageSourceProjectUrl)/issues?q=milestone:$(FileVersion)+is:closed</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
