--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,7 +47,7 @@ build: off
 test: off
 
 build_script:
-  - pwsh: ./build.ps1 --target=ContinuousIntegration --verbosity=Diagnostic
+  - pwsh: ./build.ps1 --target=CI --verbosity=Diagnostic
 
 cache:
   - "tools -> build.config,recipe.cake"
