build(github-action): change double quote to single quote

--- a/.github/workflows/create-releasenotes.yml
+++ b/.github/workflows/create-releasenotes.yml
@@ -3,9 +3,9 @@ name: Create Milestone Release Notes
 on:
   push:
     branches:
-      - "release/**"
+      - 'release/**'
     paths-ignore:
-      - "*.md"
+      - '*.md'
 
 jobs:
   creation:
