--- a/.github/workflows/create-releasenotes.yml
+++ b/.github/workflows/create-releasenotes.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Build Release Notes
-        run: ./build.sh --target=Build-ReleaseNotes
+        run: ./build.sh --target=Build-ReleaseNotes --prepareLocalRelease=true
       - name: Commit Chagelog
         uses: EndBug/add-and-commit@v4.2.0
         with:
