--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 image:
   #    - macos
   - Ubuntu
-  - Visual Studio 2017
+  - Visual Studio 2019
 matrix:
   fast_finish: true
 environment:
@@ -48,6 +48,5 @@ build_script:
   - ps: ./build.ps1 --target=CI --verbosity=Diagnostic
 
 cache:
-  - "tools -> build.config,recipe.cake"
-  - ".dotnet -> build.config"
+  - "tools -> recipe.cake,.build/versioning.cake"
   - "src/Cake.Warp/warp -> recipe.cake"
