--- a/src/Cake.Warp/Cake.Warp.csproj
+++ b/src/Cake.Warp/Cake.Warp.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
+        <ReleaseNotesPath>$(MSBuildThisFileDirectory)/../../tools/RELEASE_NOTES.txt</ReleaseNotesPath>
         <!-- I am lazy, so I don't want to update the year every time a new year
              comes around -->
         <StartYear>2019</StartYear>
@@ -32,8 +33,6 @@
         <RepositoryType>git</RepositoryType>
         <PackageSourceProjectUrl>https://github.com/cake-contrib/Cake.Warp</PackageSourceProjectUrl>
         <RepositoryUrl>$(PackageSourceProjectUrl).git</RepositoryUrl>
-        <PackageReleaseNotes Condition=" '$(Version)' == '$(FileVersion)'">All release notes for $(AssemblyName) can be found on our GitHub release page - $(PackageSourceProjectUrl)/releases/tag/$(Version)</PackageReleaseNotes>
-        <PackageReleaseNotes Condition=" '$(Version)' != '$(FileVersion)'">Development releases do not contain release notes, please see the closed issues in these cases - $(PackageSourceProjectUrl)/issues?q=milestone:$(FileVersion)+is:closed</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
@@ -71,4 +70,14 @@
         <EmbeddedResource Include="warp/**/*" />
         <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
     </ItemGroup>
+
+    <Target Name="PreparePackageReleaseNotesFromFile" BeforeTargets="GenerateNuspec" Condition="Exists('$(ReleaseNotesPath)')">
+        <ReadLinesFromFile File="$(ReleaseNotesPath)">
+            <Output TaskParameter="Lines" ItemName="ReleaseNoteLines" />
+        </ReadLinesFromFile>
+    </Target>
+
+    <PropertyGroup>
+        <PackageReleaseNotes>@(ReleaseNoteLines, '%0a')</PackageReleaseNotes>
+    </PropertyGroup>
 </Project>
