--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "editor.rulers": [80],
     "[markdown]": {
         "editor.rulers": [120]
-    }
+    },
+    "powershell.codeFormatting.addWhitespaceAroundPipe": true
 }
