--- a/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
+++ b/src/Cake.Warp.Tests/Cake.Warp.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+        <TargetFrameworks>net5.0;netcoreapp2.1;net461</TargetFrameworks>
         <NoWarn>$(NoWarn);CS1591;SA1600</NoWarn>
 
         <IsPackable>false</IsPackable>
